# crabsid

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: config.rs  hvsc.rs  main.rs  memory.rs  player.rs  playlist.rs  sid_file.rs  tui.rs
src/tui/: app.rs  draw.rs  input.rs  mod.rs  theme.rs  widgets.rs
