[package]
name = "crabsid"
version = "0.1.0"
edition = "2024"
authors = ["Mikael Lund"]
license = "MIT"
description = "A command-line SID music player"
repository = "https://github.com/mlund/crabsid"
keywords = ["sid", "c64", "commodore", "chiptune", "music"]
categories = ["multimedia::audio", "emulators"]

[dependencies]
# Using fork with envelope overflow fix (https://github.com/binaryfields/resid-rs/pull/14)
resid-rs = { git = "https://github.com/sbechet/resid-rs.git", rev = "b57c4ade980ea2641fd2bcf8e5974654204217c1" }
mos6502 = "0.6"
tinyaudio = "2.0"
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
