[package]
name = "crabsid"
version = "0.1.0"
edition = "2024"
authors = ["Mikael Lund"]
license = "MIT"
description = "A command-line SID music player"
repository = "https://github.com/mlund/crabsid"
keywords = ["sid", "c64", "commodore", "chiptune", "music"]
categories = ["multimedia::audio", "emulators"]

[dependencies]
# Using fork with envelope overflow fix (https://github.com/binaryfields/resid-rs/pull/14)
resid-rs = { git = "https://github.com/gorsat/resid-rs.git", rev = "72fbc5d1fa2f061d2bcf737f2879758750ba2819" }
mos6502 = { git = "https://github.com/mlund/mos6502.git", branch = "illegal" }
tinyaudio = "2.0"
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
ureq = "3"
dirs = "6"
